# manimator-usm

./: .gitignore  docker-compose.yml  main.py  other.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  manim_generator.py  schemas.py  tasks.py
demo/demo/: settings.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
