[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "manim>=0.20.1",
    "python-multipart>=0.0.27",
    "sympy>=1.14.0",
    "uvicorn>=0.46.0",
]
